name: twchs
version: 0.1
author: asi1024
synopsis: My twitter client written in Haskell
cabal-version: >= 1.10
build-type: Simple

library
    hs-source-dirs: src
    default-Language: Haskell2010
    build-depends: base >= 4 && < 5
                   , authenticate-oauth
                   , bytestring
                   , case-insensitive
                   , containers
                   , http-conduit
                   , lens
                   , network-uri
                   , twitter-conduit

    exposed-modules:
      Common

    ghc-options: -Wall -threaded

executable main
  hs-source-dirs: src-exec
  default-language: Haskell2010
  main-is: main.hs
  build-depends: base >= 4 && < 5
                 , conduit
                 , conduit-extra
                 , directory
                 , filepath
                 , http-conduit
                 , lens
                 , process
                 , text
                 , transformers
                 , twitter-conduit
                 , twitter-types-lens
                 , twchs

  ghc-options: -Wall -threaded
